[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scenes/Events/player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Events/shooter.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Events/ray_milk.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Charasets/cow.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Events/player_animations.tres" type="Animation" id=5]
[ext_resource path="res://Scenes/Events/cowbell_collector.gd" type="Script" id=6]
[ext_resource path="res://Sound/player_jump.ogg" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Events/map_light.tscn" type="PackedScene" id=8]

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -13.26, -5.39603, -9.45393, -8.08105, 6.94148, -8.08105, 11.3331, -5.21703, 11.3331, 4.27004, 9.28368, 8.56607, 1.37875, 13.0411, -3.59843, 13.0411, -11.7961, 8.38707, -13.26, 4.44904 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( -13.26, -5.39603, -9.45393, -8.08105, 6.94148, -8.08105, 11.3331, -5.21703, 11.3331, 4.27004, 9.28368, 8.56607, 1.37875, 13.0411, -3.59843, 13.0411, -11.7961, 8.38707, -13.26, 4.44904 )

[sub_resource type="Animation" id=4]

length = 0.6
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 34.3036 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]

transform/scale = Vector2( 1.8, 1.8 )
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1.89755, 0, 0, 3.10364, 2.93931, -4.91934 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1.89755, 0, 0, 3.10364, 2.93931, -4.91934 )
shapes/1/trigger = true
collision/layers = 1057
collision/mask = 2066
collision/margin = 0.08
script/script = ExtResource( 1 )
MAX_JUMP_TIME = 20
MAX_WALK_SPEED = 500
invulneravility_time = 8
JUMP_SPEED = 620
altitude = 0.5
cages_open = 0

[node name="shooter" type="Node2D" parent="."]

transform/pos = Vector2( 25.3282, 2.0993 )
transform/scale = Vector2( 0.5, 0.5 )
script/script = ExtResource( 2 )
SHOOT_CADENCE = 0.1
bullet_cost = 2

[node name="ray" parent="shooter" instance=ExtResource( 3 )]

transform/pos = Vector2( -4.25251, 3.87422 )
enabled = false
cast_to = Vector2( 0, 0 )
layer_mask = 30

[node name="Collision_Normal" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 2.93931, -4.91934 )
transform/scale = Vector2( 1.89755, 3.10364 )
build_mode = 0
polygon = Vector2Array( -13.26, -5.39603, -9.45393, -8.08105, 6.94148, -8.08105, 11.3331, -5.21703, 11.3331, 4.27004, 9.28368, 8.56607, 1.37875, 13.0411, -3.59843, 13.0411, -11.7961, 8.38707, -13.26, 4.44904 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Collision_Agachado" type="CollisionPolygon2D" parent="."]

transform/pos = Vector2( 2.93931, -4.91934 )
transform/scale = Vector2( 1.89755, 3.10364 )
build_mode = 0
polygon = Vector2Array( -13.26, -5.39603, -9.45393, -8.08105, 6.94148, -8.08105, 11.3331, -5.21703, 11.3331, 4.27004, 9.28368, 8.56607, 1.37875, 13.0411, -3.59843, 13.0411, -11.7961, 8.38707, -13.26, 4.44904 )
shape_range = Vector2( 1, 1 )
trigger = true

[node name="foots" type="Node2D" parent="."]

transform/pos = Vector2( -0.0271127, 37.1198 )
transform/scale = Vector2( 0.885237, 0.0763853 )

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 4 )
vframes = 6
hframes = 6
frame = 6
region_rect = Rect2( 0, 0, 96, 96 )

[node name="animations" type="AnimationPlayer" parent="sprite"]

playback/process_mode = 0
playback/default_blend_time = 0.2
root/root = NodePath("..")
anims/idle = SubResource( 4 )
anims/walk = ExtResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="sprite"]

transform/pos = Vector2( -16, 16 )
transform/scale = Vector2( 23.4375, 45.3125 )
z/relative = false
offset = Vector2( 0, -80 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.1, 1.1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.05
drag_margin/top = 0.2
drag_margin/right = 0.05
drag_margin/bottom = 0.2

[node name="cowbell_collector" type="Node2D" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
script/script = ExtResource( 6 )
pitch_increment = 0.02
base_pitch = 1.5
bonus_threshold = 20
bonus_cowbells = 15

[node name="next_cowbell_time" type="Timer" parent="cowbell_collector"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="sound" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = true
stream/loop = false
stream/volume_db = 7.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Light2D" parent="." instance=ExtResource( 8 )]

[node name="BottomLevelDetector" type="Area2D" parent="." groups=[
"bottom_level_detector",
]]

transform/pos = Vector2( -0.905016, 94.1209 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3.16754, -0.452507 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
collision/layers = 2
collision/mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="BottomLevelDetector"]

transform/pos = Vector2( 3.16754, -0.452507 )
shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[connection signal="looking_left" from="." to="shooter" method="_on_KinematicBody2D_looking_left"]

[connection signal="looking_right" from="." to="shooter" method="_on_KinematicBody2D_looking_right"]


